fixes ResultTypeTest, brings back localized mapping of Resolution and FeatureGroup